--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,6 +4,6 @@
     <input type="text" name="player1"/>
     <laber for="player2">PLAYER 2</label>
     <input type="text" name="player2"/>
-    <input type="submit" />
+    <input type="submit" value="Submit"/>
   </form>
 </div>
