Enabled sessions to store names between POST and GET requests

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,9 +1,9 @@
 <div>
   <form action="/names" method="post">
     <laber for="player1">PLAYER 1</label>
-    <input type="text" name="player1"/>
+    <input type="text" name="player1name"/>
     <laber for="player2">PLAYER 2</label>
-    <input type="text" name="player2"/>
+    <input type="text" name="player2name"/>
     <input type="submit" value="Submit"/>
   </form>
 </div>
