Implementing User Story 3, Player 1 attacking

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,8 +1,8 @@
 <div>
   <form action="/names" method="post">
-    <laber for="player1">PLAYER 1</label>
+    PLAYER 1
     <input type="text" name="player1name"/>
-    <laber for="player2">PLAYER 2</label>
+    PLAYER 2
     <input type="text" name="player2name"/>
     <input type="submit" value="Submit"/>
   </form>
