Add global vars

--- a/lib/views/play.erb
+++ b/lib/views/play.erb
@@ -1,13 +1,14 @@
-<%=@player1%> vs <%=@player2%><br />
+
+
+<br /><%=@p1name %> vs <%=@p2name %><br />
 HP : <%=@hp1%>    HP : <%=@hp2%>
+<br />
 <form action='/play'>
   <input type='submit' value='Attack!'/>
   <input type='hidden' name='attack' value='p1' />
 </form>
 <% if @attack == 'p1' %>
-<%=@player1%> is attacking!...
+  <%=@p1name %> is attacking!...
 <% elsif @attack == 'p2'%>
-<%=@player1%> is attacking!...
-<!-- <% else %> -->
-
+  <%=@p2name %> is attacking!...
 <% end %>
