Reviewing an refactoring

--- a/lib/views/attack.erb
+++ b/lib/views/attack.erb
@@ -1,5 +1,5 @@
-<%=@p1name%> vs <%=@p2name%><br />
-HP : <%=@hp1%>    HP : <%=@hp2%>
+<%=@p1name%> is attacking!...<%=@p2name%><br />
+<%=@p2name%> : <%=@hp2%>
 <form action='/attack'>
   <input type='submit' value='Attack!'/>
 </form>
