--- a/lib/views/attack.erb
+++ b/lib/views/attack.erb
@@ -1,4 +1,4 @@
-<%=@p1name%> is attacking!...<%=@p2name%><br />
+<%=@p1name%> is attacking!...<br />
 <%=@p2name%> : <%=@hp2%>
 <form action='/attack'>
   <input type='submit' value='Attack!'/>
